# explain-strace

./: .gitignore  Makefile  README.md  SYSCALLS.md  TESTING.md  explain_strace.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: generate_syscalls.py
src/explain_strace/: __init__.py  cli.py  syscalls.json
tests/: __init__.py  test_cli.py
