# Build system configuration
# Uses setuptools as the build backend (most common and well-supported)
[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

# Project metadata
[project]
name = "explain-strace"
version = "0.1.0"
description = "Parse and explain strace output with human-readable descriptions"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = "MIT"

# Requires Python 3.9+ for current setuptools
requires-python = ">=3.9"

# PyPI classifiers help users find your package
# See: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",  # strace is Linux-specific
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
keywords = ["strace", "system-calls", "debugging", "linux", "syscalls"]

# No runtime dependencies - keeps the package lightweight
dependencies = []

# Development dependencies only installed with: pip install -e ".[dev]"
[project.optional-dependencies]
dev = [
    "pytest>=7.0",       # Testing framework
    "pytest-cov>=4.0",   # Coverage reporting
    "black>=23.0",       # Code formatter
    "ruff>=0.1.0",       # Fast linter (replaces flake8, isort, etc.)
    "build>=0.10.0",     # Package builder (for make build)
]

# Project links displayed on PyPI
[project.urls]
Homepage = "https://github.com/bjdean/explain-strace"
Repository = "https://github.com/bjdean/explain-strace"
Issues = "https://github.com/bjdean/explain-strace/issues"

# Entry point creates the 'explain-strace' command
[project.scripts]
explain-strace = "explain_strace.cli:main"

# Tell setuptools to find packages in the src/ directory
# This is the "src layout" which prevents accidentally importing from the project root
[tool.setuptools.packages.find]
where = ["src"]

# Black - opinionated code formatter
# Enforces consistent code style across the project
[tool.black]
line-length = 100  # Slightly longer than PEP 8's 79 for modern displays
target-version = ["py38", "py39", "py310", "py311", "py312"]  # Format for all supported versions

# Ruff - fast Python linter written in Rust
[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
# Select which rule categories to enable (ruff has 100+ categories available)
# Ruff defaults are minimal (F, E4, E7, E9). This extends defaults with:
# - Full E/W for complete PEP 8 compliance
# - I for consistent import ordering (replaces isort)
# - B for common bug patterns
# - C4 for cleaner comprehensions
# - UP to use modern Python syntax
# See: https://docs.astral.sh/ruff/rules/
select = [
    "E",   # pycodestyle errors (PEP 8 style violations)
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined variables, etc.)
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (common bug patterns)
    "C4",  # flake8-comprehensions (better list/dict/set comprehensions)
    "UP",  # pyupgrade (modernize Python syntax)
]
ignore = []  # No rules ignored - enforce all selected rules

[tool.ruff.lint.isort]
known-first-party = ["explain_strace"]  # Treat explain_strace as first-party for import sorting

# Pytest - testing framework configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

# Coverage.py - code coverage measurement
[tool.coverage.run]
source = ["src"]  # Measure coverage for code in src/
omit = ["*/tests/*"]  # Don't measure coverage of test files themselves

[tool.coverage.report]
# Lines matching these patterns are excluded from coverage requirements
# Currently only excludes the script entry point; add more patterns as needed
exclude_lines = [
    "pragma: no cover",  # Explicit exclusion marker (can be added to any line)
    "if __name__ == .__main__.:",  # Script entry point (used in cli.py)
]
